--- a/frontends/quasar-umd/clientjs/package.json
+++ b/frontends/quasar-umd/clientjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "site-flask-vue-bootstrap-client",
+  "name": "site-flask-vue-quasar-umd-client",
   "description": "",
   "private": true,
   "version": "0.0.0",
@@ -19,20 +19,13 @@
     "install": "yarn run build:dev"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-brands-svg-icons": "^5.15.2",
-    "@fortawesome/free-regular-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@popperjs/core": "^2.6.0",
+    "@mdi/font": "^5.9.55",
+    "@quasar/extras": "^1.9.14",
     "ajv": "^7.0.3",
-    "bootstrap": "^4.6.0",
-    "bootstrap-vue": "^2.21.2",
     "event-source-polyfill": "^1.0.22",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.5.1",
-    "metismenu": "^3.0.6",
+    "quasar": "^1.15.1",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-router": "^3.5.1",
@@ -47,7 +40,6 @@
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "axios": "^0.21.1",
-    "bootswatch": "^4.6.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
@@ -59,7 +51,6 @@
     "node-sass": "^5.0.0",
     "node-sass-package-importer": "^5.3.2",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "popper.js": "^1.16.1",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
