--- a/frontends/quasar-umd/clientjs/.vscode/settings.json
+++ b/frontends/quasar-umd/clientjs/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
-  "eslint.validate": ["typescript", "typescriptreact"],
-  "eslint.packageManager": "yarn",
+  "eslint.validate": [
+    "typescript",
+    "typescriptreact"
+  ],
   "npm.packageManager": "yarn",
+  "search.exclude": {
+    "**/.yarn": true,
+    "**/.pnp.*": true
+  },
+  "eslint.nodePath": ".yarn/sdks",
+  "typescript.tsdk": ".yarn/sdks/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
