--- a/backends/flask/clientjs/package.json
+++ b/backends/flask/clientjs/package.json
@@ -71,8 +71,8 @@
     "vue-property-decorator": "^9.1.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.17.0",
-    "webpack-cli": "4.4.0",
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0",
     "webpack-dev-middleware": "^4.1.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-hot-middleware": "^2.25.0"
