--- a/frontends/vuetify/clientjs/package.json
+++ b/frontends/vuetify/clientjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "site-vue-bootstrap-client",
+  "name": "site-vue-vuetify-client",
   "description": "",
   "private": true,
   "version": "0.0.0",
@@ -27,27 +27,22 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@popperjs/core": "^2.6.0",
     "ajv": "^7.0.3",
-    "bootstrap": "^4.6.0",
-    "bootstrap-vue": "^2.21.2",
     "event-source-polyfill": "^1.0.22",
     "isomorphic-fetch": "^3.0.0",
-    "jquery": "^3.5.1",
-    "metismenu": "^3.0.6",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-router": "^3.5.1",
     "vue-server-renderer": "^2.6.12",
+    "vuetify": "^2.4.3",
     "vuex": "^3.6.2",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.5",
     "@types/webpack-dev-server": "^3.11.1",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "axios": "^0.21.1",
-    "bootswatch": "^4.6.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
@@ -59,7 +54,6 @@
     "node-sass": "^5.0.0",
     "node-sass-package-importer": "^5.3.2",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "popper.js": "^1.16.1",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
@@ -71,6 +65,7 @@
     "vue-property-decorator": "^9.1.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.6.0",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-middleware": "^4.1.0",
