--- a/backends/expressjs/server/.vscode/settings.json
+++ b/backends/expressjs/server/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
-  "eslint.validate": ["typescript", "typescriptreact"],
+  "eslint.validate": [
+    "typescript",
+    "typescriptreact"
+  ],
   "npm.packageManager": "yarn"
-
   //"search.exclude": {
   //  "**/.yarn": true,
   //  "**/.pnp.*": true
@@ -9,4 +11,12 @@
   //"eslint.nodePath": ".yarn/sdks",
   //"typescript.tsdk": ".yarn/sdks/typescript/lib",
   //"typescript.enablePromptUseWorkspaceTsdk": true
+  ,
+  "search.exclude": {
+    "**/.yarn": true,
+    "**/.pnp.*": true
+  },
+  "eslint.nodePath": ".yarn/sdks",
+  "typescript.tsdk": ".yarn/sdks/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
