--- a/backends/expressjs/server/package.json
+++ b/backends/expressjs/server/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "run:dev": "NODE_ENV=development node build/index.js",
     "run:dev:watch": "NODE_ENV=development nodemon build/index.js",
-    "build:dev": "NODE_ENV=development webpack --progress",
-    "build:dev:watch": "NODE_ENV=development webpack --watch",
+    "build:dev": "NODE_ENV=development webpack --config webpack/app.webpack.config.js --progress",
+    "build:dev:watch": "NODE_ENV=development webpack --config webpack/app.webpack.config.js --watch",
     "build:upgrade": "yarn upgrade-interactive",
     "build:install": "yarn install",
     "debug:dev": "yarn build:dev && yarn run:dev",
@@ -18,25 +18,25 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.8",
-    "@types/terser-webpack-plugin": "^5.0.0",
-    "@types/webpack-dev-middleware": "^3.7.2",
-    "@types/webpack-env": "^1.15.3",
+    "@types/express": "^4.17.11",
+    "@types/terser-webpack-plugin": "^5.0.2",
+    "@types/webpack-dev-middleware": "^4.1.0",
+    "@types/webpack-env": "^1.16.0",
     "@types/webpack-hot-middleware": "^2.25.3",
     "@types/webpack-node-externals": "^2.5.0",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "@yarnpkg/pnpify": "^2.3.3",
-    "eslint": "^7.11.0",
-    "fork-ts-checker-webpack-plugin": "^5.2.0",
-    "nodemon": "^2.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "@yarnpkg/pnpify": "^2.4.0",
+    "eslint": "^7.18.0",
+    "fork-ts-checker-webpack-plugin": "^6.1.0",
+    "nodemon": "^2.0.7",
     "pnp-webpack-plugin": "^1.6.4",
-    "terser-webpack-plugin": "^5.0.0",
-    "ts-loader": "^8.0.5",
-    "typescript": "^4.0.3",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.0.0",
-    "webpack-dev-middleware": "^3.7.2",
+    "terser-webpack-plugin": "^5.1.1",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-middleware": "^4.1.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^2.5.2"
   }
